src/test/deca/context/valid/SansObjet/ReadInt-intDeclVar.deca
// Description:
//   Calling readInt() on an int declaration
// 
// Results:
//     1.0
// 
// Historique: 
//    cree le 12/01/2022 

{
    int x = readInt();
}
