src/test/deca/context/invalid/SansObjet/DeclVar-Div-int-float-float.deca
// Description:
//    Declaration of a int variable using / operation between a float variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  2.5; 
    float y = 0.1; 
    int z = 2.5 / 0.1; 
}
